--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: '^5.0.0'
   http: ^0.12.2
   cached_network_image: ^2.1.0+1
   webview_flutter: ^2.0.7
